force-app/main/default/objects/AllotmentConditions__c/AllotmentConditions__c.object-meta.xml
<CustomObject>
    <description>Used to record S14-5(4) conditions applying to the approval of places. (E.g. If approval requires priority placement to be given to people with specific needs.)</description>
    <label>Allotment Conditions</label>
    <nameField>
        <displayFormat>ACON-{0000}</displayFormat>
        <label>Allotment Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allotment Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>