force-app/main/default/objects/AllotmentConditions__c/fields/Allotment__c.field-meta.xml
<CustomField>
    <fullName>Allotment__c</fullName>
    <label>Allotment</label>
    <referenceTo>Allotment__c</referenceTo>
    <relationshipName>Places_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>