force-app/main/default/objects/AllotmentConditions__c/fields/ApprovedProviderMakeProvision__c.field-meta.xml
<CustomField>
    <fullName>ApprovedProviderMakeProvision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Provider Must Make Provision</label>
    <type>Checkbox</type>
</CustomField>