force-app/main/default/objects/AllotmentConditions__c/fields/ApprovedProviderMustEnsure__c.field-meta.xml
<CustomField>
    <fullName>ApprovedProviderMustEnsure__c</fullName>
    <description>List of milestones to complete by the particular date.</description>
    <label>Approved Provider Must Ensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval of Finance</fullName>
            </value>
            <value>
                <fullName>Development Application/s approved</fullName>
            </value>
            <value>
                <fullName>Building application approved</fullName>
            </value>
            <value>
                <fullName>Commencement of building works</fullName>
            </value>
            <value>
                <fullName>Completion of building works</fullName>
            </value>
            <value>
                <fullName>Commence admission of residents</fullName>
            </value>
            <value>
                <fullName>Construction Certificate approved</fullName>
            </value>
            <value>
                <fullName>Rezoning of land</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
            <value>
                <fullName>Acquisition of land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>