force-app/main/default/objects/AllotmentConditions__c/fields/ConditionMetDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionMetDate__c</fullName>
    <description>By what date must this condition be met?</description>
    <label>Condition Met Date</label>
    <type>Date</type>
</CustomField>