force-app/main/default/objects/AllotmentConditions__c/fields/ConditionMetOptions__c.field-meta.xml
<CustomField>
    <fullName>ConditionMetOptions__c</fullName>
    <description>Condition must be met options</description>
    <label>Condition Met Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By a date [x] [period] after the date this allocation takes effect</fullName>
            </value>
            <value>
                <fullName>Within [x] [period] after determination has been made under section 15-1 that the Approved Provider is ready to provide care</fullName>
            </value>
            <value>
                <fullName>By [DATE]</fullName>
            </value>
            <value>
                <fullName>Before determination can be made under section that 15-1 that the Approved Provider is ready to provide care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>