force-app/main/default/objects/AllotmentConditions__c/fields/ConditionMetWhenDuration__c.field-meta.xml
<CustomField>
    <fullName>ConditionMetWhenDuration__c</fullName>
    <description>Within how many units of the (ConditionMetWhenPeriod) field must this condition be met?  For example, &quot;it must be met within 5 weeks&quot; - the 5 is this field, and the weeks are from the ConditionMetWhenPeriod field.</description>
    <label>Condition Met When (Duration)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>