force-app/main/default/objects/AllotmentConditions__c/fields/ConditionMetWhenPeriod__c.field-meta.xml
<CustomField>
    <fullName>ConditionMetWhenPeriod__c</fullName>
    <label>Condition Met When (Period)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimePeriod</valueSetName>
    </valueSet>
</CustomField>