force-app/main/default/objects/AllotmentConditions__c/fields/ConditionMustBeMet__c.field-meta.xml
<CustomField>
    <fullName>ConditionMustBeMet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selector on page to control visibility of questions</description>
    <label>The Condition Must Be Met</label>
    <type>Checkbox</type>
</CustomField>