force-app/main/default/objects/AllotmentConditions__c/fields/ConditionType__c.field-meta.xml
<CustomField>
    <fullName>ConditionType__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Conditions Apply</fullName>
            </value>
            <value>
                <fullName>TargetGroupConditions</fullName>
                <label>Target Group Conditions</label>
            </value>
            <value>
                <fullName>DemonstratedLinksConditions</fullName>
                <label>Demonstrated Links Conditions</label>
            </value>
            <value>
                <fullName>ResidentialRespiteCareConditions</fullName>
                <label>Residential Respite Care Conditions</label>
            </value>
            <value>
                <fullName>PreallocationLumpSumsConditions</fullName>
                <label>Pre-allocation Lump Sums Conditions</label>
            </value>
            <value>
                <fullName>MilestonesConditions</fullName>
                <label>Milestones Conditions</label>
            </value>
            <value>
                <fullName>ProfessionalPlanningOfAgedCareServicesConditions</fullName>
                <label>Professional Planning of Aged Care Services Conditions</label>
            </value>
            <value>
                <fullName>OtherConditions</fullName>
                <label>Other Conditions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>