force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Background__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Background__c</fullName>
    <description>Background information for special needs group</description>
    <label>Background</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Arabic Muslim</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Assyrian</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Croatian</fullName>
            </value>
            <value>
                <fullName>Culturally and Linguistically diversity</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Estonian</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>Former Yugoslavian</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>French Mauritian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Hungarian</fullName>
            </value>
            <value>
                <fullName>Indian Languages</fullName>
            </value>
            <value>
                <fullName>Indo-Chinese</fullName>
            </value>
            <value>
                <fullName>Iranian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Khmer</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Lao</fullName>
            </value>
            <value>
                <fullName>Latvian</fullName>
            </value>
            <value>
                <fullName>Lithuanian</fullName>
            </value>
            <value>
                <fullName>Macedonian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>