force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comments__c</fullName>
    <description>Professional Planning of the Aged Care Service Comments</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>