force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Condition_Status__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Condition_Status__c</fullName>
    <label>Condition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Non-current</fullName>
            </value>
            <value>
                <fullName>Approved-Not Activated</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>