force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Event__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Allotment Conditions</relationshipLabel>
    <relationshipName>Allotment_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>