force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_FreeText__c.field-meta.xml
<CustomField>
    <fullName>GPMS_FreeText__c</fullName>
    <description>Used for Other condition to enter any text.</description>
    <label>Free Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>