force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_MilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>GPMS_MilestoneDate__c</fullName>
    <description>The approved provider must ensure:By [day] [moth] [year]</description>
    <inlineHelpText>Milestone:The approved provider must ensure:By [day] [moth] [year]</inlineHelpText>
    <label>Milestone by date</label>
    <type>Date</type>
</CustomField>