force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_MinimumNumberOfPlaces__c.field-meta.xml
<CustomField>
    <fullName>GPMS_MinimumNumberOfPlaces__c</fullName>
    <description>A minimum number of this care of Places</description>
    <label>A minimum number of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>