force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Number_of_Places__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Number_of_Places__c</fullName>
    <description>Number of care type places</description>
    <label>Number of Places</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>