force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_of_Places__c.field-meta.xml
<CustomField>
    <fullName>GPMS_of_Places__c</fullName>
    <description>Percentage of this care type places</description>
    <label>% of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>