force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Percentage_of_Places__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Percentage_of_Places__c</fullName>
    <description>Convert number of places to percentage</description>
    <formula>IF(OR(ISBlANK(GPMS_of_Places__c),GPMS_of_Places__c == 0), IF(OR(ISBlANK(GPMS_PercentageMinimumPlaces__c), GPMS_PercentageMinimumPlaces__c==0), IF(OR(ISBlANK(GPMS_MinimumNumberOfPlaces__c), GPMS_MinimumNumberOfPlaces__c==0), (GPMS_Number_of_Places__c/ Allotment__r.Number_of_Places__c), (GPMS_MinimumNumberOfPlaces__c/ Allotment__r.Number_of_Places__c)), GPMS_PercentageMinimumPlaces__c), GPMS_of_Places__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Places</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>