force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_PercentageMinimumPlaces__c.field-meta.xml
<CustomField>
    <fullName>GPMS_PercentageMinimumPlaces__c</fullName>
    <description>A minimum % of this care of Places</description>
    <label>A minimum % of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>