force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_ProviderHoldPreAllocation__c.field-meta.xml
<CustomField>
    <fullName>GPMS_ProviderHoldPreAllocation__c</fullName>
    <description>Check if provider hold pre-allocation lump sums in this service</description>
    <inlineHelpText>Does the Provider hold pre allocation lump sums in respect of this service?</inlineHelpText>
    <label>Does the Provider hold pre allocation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>