force-app/main/default/objects/AllotmentConditions__c/fields/GPMS_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Special_Needs__c</fullName>
    <description>Select Special Needs Groups</description>
    <label>Special Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People who are care leavers</fullName>
            </value>
            <value>
                <fullName>People who live in rural or remote areas</fullName>
            </value>
            <value>
                <fullName>People who are financially or socially disadvantaged</fullName>
            </value>
            <value>
                <fullName>People from Aboriginal and Torres Strait Islander communities</fullName>
                <label>People from Aboriginal or Torres Strait Islander communities</label>
            </value>
            <value>
                <fullName>People who are veterans, including a spouse, widow or widower of a veteran</fullName>
            </value>
            <value>
                <fullName>In the form of consumer directed care, as described in the Annexure to this Schedule</fullName>
            </value>
            <value>
                <fullName>People from the Lesbian, Gay, Bisexual, Transgender and Intersex community</fullName>
            </value>
            <value>
                <fullName>People who are homeless or at risk of becoming homeless</fullName>
            </value>
            <value>
                <fullName>People from a background that is</fullName>
            </value>
            <value>
                <fullName>Eligible persons with</fullName>
            </value>
            <value>
                <fullName>People with dementia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>