force-app/main/default/objects/AllotmentConditions__c/fields/InAccordanceWithUndertaking__c.field-meta.xml
<CustomField>
    <fullName>InAccordanceWithUndertaking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selector on page to control visibility of questions</description>
    <label>In Accordance With The Undertakings Made</label>
    <type>Checkbox</type>
</CustomField>