force-app/main/default/objects/AllotmentConditions__c/fields/InAccordanceWithUndertakingPage__c.field-meta.xml
<CustomField>
    <fullName>InAccordanceWithUndertakingPage__c</fullName>
    <label>In Accordance With Undertakings (Page)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>