force-app/main/default/objects/AllotmentConditions__c/fields/InAccordanceWithUndertakingType__c.field-meta.xml
<CustomField>
    <fullName>InAccordanceWithUndertakingType__c</fullName>
    <label>In Accordance With Undertakings (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In its application for Residential places in the Aged Care Approvals Round</fullName>
            </value>
            <value>
                <fullName>On Page [X] of its application for Residential places in the Aged Care Approvals Round</fullName>
            </value>
            <value>
                <fullName>In its application for Flexible places in the Aged Care Approvals Round</fullName>
            </value>
            <value>
                <fullName>On Page [X] of its application for Flexible places in the Aged Care Approvals Round</fullName>
            </value>
            <value>
                <fullName>In its application for NATSIFAC places in the Aged Care Approvals Round</fullName>
            </value>
            <value>
                <fullName>On Page [X] of its application for NATSIFAC places in the Aged Care Approvals Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>