force-app/main/default/objects/AllotmentConditions__c/fields/InRespectOfCondition__c.field-meta.xml
<CustomField>
    <fullName>InRespectOfCondition__c</fullName>
    <label>In Respect Of (Condition)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Places</fullName>
            </value>
            <value>
                <fullName>Number of Places</fullName>
            </value>
            <value>
                <fullName>% of Places</fullName>
            </value>
            <value>
                <fullName>A minimum number of Places</fullName>
            </value>
            <value>
                <fullName>A minimum % of Places</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>