force-app/main/default/objects/AllotmentConditions__c/fields/InRespectOfQuantity__c.field-meta.xml
<CustomField>
    <fullName>InRespectOfQuantity__c</fullName>
    <label>In Respect Of (Quantity)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>