force-app/main/default/objects/AllotmentConditions__c/fields/KeyIssues__c.field-meta.xml
<CustomField>
    <fullName>KeyIssues__c</fullName>
    <inlineHelpText>Dementia, 
or
Dementia for places located in a secure unit designed to provide the appropriate level of care to cater to the needs of people with a diagnosis of dementia, or
Challenging behaviours</inlineHelpText>
    <label>Key Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Dementia for places located in a secure unit designed to provide the appropriate level of care to cater to the needs of people with a diagnosis of dementia</fullName>
            </value>
            <value>
                <fullName>Challenging behaviours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>