force-app/main/default/objects/AllotmentConditions__c/fields/KeyIssuesCaveats__c.field-meta.xml
<CustomField>
    <fullName>KeyIssuesCaveats__c</fullName>
    <description>&quot;Or people with&quot; or &quot;Or&quot;</description>
    <label>Key Issue With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Or people with</fullName>
            </value>
            <value>
                <fullName>And people with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>