force-app/main/default/objects/AllotmentConditions__c/fields/MilestoneRequired__c.field-meta.xml
<CustomField>
    <fullName>MilestoneRequired__c</fullName>
    <inlineHelpText>The Approved Provider must ensure this milestone is met by the milestone date.</inlineHelpText>
    <label>Milestone required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval of Finance Development</fullName>
            </value>
            <value>
                <fullName>Application/s approved</fullName>
            </value>
            <value>
                <fullName>Building application approved</fullName>
            </value>
            <value>
                <fullName>Commencement of building works</fullName>
            </value>
            <value>
                <fullName>Completion of building works</fullName>
            </value>
            <value>
                <fullName>Commence admission of residents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>