force-app/main/default/objects/AllotmentConditions__c/fields/OtherComments__c.field-meta.xml
<CustomField>
    <fullName>OtherComments__c</fullName>
    <label>Other Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>