force-app/main/default/objects/AllotmentConditions__c/fields/ProviderMustDemonstrateRelevantLinks__c.field-meta.xml
<CustomField>
    <fullName>ProviderMustDemonstrateRelevantLinks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selector on page to control visibility of questions</description>
    <label>Provider Must Demonstrate Relevant Links</label>
    <type>Checkbox</type>
</CustomField>