force-app/main/default/objects/AllotmentConditions__c/fields/ProvisionRequirement__c.field-meta.xml
<CustomField>
    <fullName>ProvisionRequirement__c</fullName>
    <label>Provision Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to maximum [X] new respite bed days per financial year</fullName>
            </value>
            <value>
                <fullName>A minimum of [X] new respite bed days per financial year</fullName>
            </value>
            <value>
                <fullName>A minimum of [X] new respite bed days but no more than a maximum of [Y] respite bed days per financial year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>