force-app/main/default/objects/AllotmentConditions__c/fields/ProvisionRequirementMax__c.field-meta.xml
<CustomField>
    <fullName>ProvisionRequirementMax__c</fullName>
    <description>Maximum number of new bed days in a new financial year.  Used in context with Provision_requirement__c</description>
    <label>Provision Requirement (Max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>