force-app/main/default/objects/AllotmentConditions__c/fields/ProvisionRequirementMin__c.field-meta.xml
<CustomField>
    <fullName>ProvisionRequirementMin__c</fullName>
    <description>Minimum number of new bed days in a new financial year.  Used in context with Provision_requirement__c</description>
    <label>Provision Requirement (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>