force-app/main/default/objects/AllotmentConditions__c/fields/SpecialNeedsConsumerDirectedCare__c.field-meta.xml
<CustomField>
    <fullName>SpecialNeedsConsumerDirectedCare__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>n the form of consumer directed care, as described in the Annexure to this Schedule</inlineHelpText>
    <label>Consumer Directed Care</label>
    <type>Checkbox</type>
</CustomField>