force-app/main/default/objects/AllotmentConditions__c/fields/TargetGroup__c.field-meta.xml
<CustomField>
    <fullName>TargetGroup__c</fullName>
    <label>Target Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Access</fullName>
            </value>
            <value>
                <fullName>Special Needs/Key Issues</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>