force-app/main/default/objects/AllotmentConditions__c/fields/TargetGroupCaveats__c.field-meta.xml
<CustomField>
    <fullName>TargetGroupCaveats__c</fullName>
    <label>Join multiple &apos;Target Group&apos; values with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>And</fullName>
            </value>
            <value>
                <fullName>Or</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>