force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Demonstrated_Links.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Demonstrated_Links</fullName>
    <active>true</active>
    <description>The Demonstrated Links Condition</description>
    <label>Demonstrated Links</label>
</RecordType>