force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Milestones.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Milestones</fullName>
    <active>true</active>
    <description>The Milestones Condition</description>
    <label>Milestones</label>
</RecordType>