force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Other.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Other</fullName>
    <active>true</active>
    <description>Other condition</description>
    <label>Other</label>
</RecordType>