force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Pre_Allocation.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Pre_Allocation</fullName>
    <active>true</active>
    <description>The Pre-Allocation Lump Sums Condition</description>
    <label>Pre-Allocation Lump Sums</label>
</RecordType>