force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Professional_Planning_Section.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Professional_Planning_Section</fullName>
    <active>true</active>
    <description>Professional Planning of the Aged Care Service Condition</description>
    <label>Professional Planning of the Aged Care Service</label>
</RecordType>