force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Residential_Respite_Care.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Residential_Respite_Care</fullName>
    <active>true</active>
    <description>The Residential Respite Care Condition</description>
    <label>Residential Respite Care</label>
</RecordType>