force-app/main/default/objects/AllotmentConditions__c/recordTypes/GPMS_Target_Group.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Target_Group</fullName>
    <active>true</active>
    <description>Target Group Condition</description>
    <label>Target Group</label>
</RecordType>