force-app/main/default/objects/AllotmentConditions__c/validationRules/Perm_AC_STO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AC_STO_Access</fullName>
    <active>true</active>
    <description>STO record access</description>
    <errorConditionFormula>AND(
ISNEW()
,
AND(
OR(
RecordType.DeveloperName = &apos;GPMS_Demonstrated_Links&apos;,
RecordType.DeveloperName = &apos;GPMS_Milestones&apos;,
RecordType.DeveloperName = &apos;GPMS_Professional_Planning_Section&apos;,
RecordType.DeveloperName = &apos;GPMS_Residential_Respite_Care&apos;),
$Permission.GPMS_STO
))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>